[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/EBGaramond-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ScriptEditor(WIP)/scriptEditor.gd" type="Script" id=2]
[ext_resource path="res://ScriptEditor(WIP)/popupTheme.tres" type="Theme" id=3]
[ext_resource path="res://ScriptEditor(WIP)/editor.gd" type="Script" id=4]
[ext_resource path="res://fonts/ubuntu.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 2
outline_color = Color( 0.352941, 0.596078, 0.580392, 1 )
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
layer = 100

[node name="jsonParser" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.164706, 0.152941, 0.152941, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="jsonParser"]
margin_left = 33.8108
margin_top = 11.8108
margin_right = 351.811
margin_bottom = 131.811
rect_min_size = Vector2( 120, 120 )
custom_fonts/font = SubResource( 1 )
text = "Script Editor"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialogLabel" type="Label" parent="jsonParser"]
margin_left = 573.048
margin_top = 46.0217
margin_right = 792.048
margin_bottom = 106.022
custom_fonts/font = ExtResource( 5 )
text = "Dialog Name:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="jsonParser"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -959.0
margin_top = -866.0
margin_right = 723.0
margin_bottom = -8.0
custom_fonts/font = ExtResource( 5 )
custom_constants/line_spacing = 4
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
wrap_enabled = true
caret_blink = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
field_val_color = Color( 0.0196078, 0.47451, 0.356863, 1 )
line_comment_color = Color( 0.607843, 0.658824, 0.513726, 1 )

[node name="manual" type="Button" parent="jsonParser"]
margin_left = 33.7295
margin_top = 135.081
margin_right = 352.73
margin_bottom = 185.081
custom_fonts/font = ExtResource( 5 )
text = "User Manual (NA)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jsonButton" type="Button" parent="jsonParser"]
margin_left = 1740.76
margin_top = 131.971
margin_right = 1871.76
margin_bottom = 181.971
custom_fonts/font = ExtResource( 5 )
text = "to .json"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loadButton" type="Button" parent="jsonParser"]
margin_left = 1752.06
margin_top = 47.8811
margin_right = 1852.06
margin_bottom = 97.8811
custom_fonts/font = ExtResource( 5 )
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="jsonParser"]
margin_right = 953.0
margin_bottom = 611.0
input_pass_on_modal_close_click = false
theme = ExtResource( 3 )
popup_exclusive = true
window_title = "Open a File"
mode = 0
filters = PoolStringArray( "*.txt", "*.json" )

[node name="AcceptDialog" type="AcceptDialog" parent="jsonParser"]
margin_right = 491.0
margin_bottom = 249.0
theme = ExtResource( 3 )
window_title = "Success!"
dialog_text = "
To Json success! You can find it in the VNScript folder."
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="jsonParser/jsonButton" to="jsonParser" method="_on_jsonButton_pressed"]
[connection signal="pressed" from="jsonParser/loadButton" to="jsonParser" method="_on_loadButton_pressed"]
[connection signal="file_selected" from="jsonParser/FileDialog" to="jsonParser" method="_on_FileDialog_file_selected"]
